packages/ppx_ptree/test/compiler_cases/leaf_misuse.ml
module Nx = struct
  type ('element, 'layout) t = Tensor
end

type t = { value : string [@ptree.leaf] } [@@deriving ptree]
